--- a/Eduversity.com/Client/Pages/Admin/Countries/Countries.razor
+++ b/Eduversity.com/Client/Pages/Admin/Countries/Countries.razor
@@ -11,7 +11,7 @@
 
     @if (loading)
     {
-        <Loading Message=@message></Loading>
+        <Loading Message=@message />
     }
     else
     {
