--- a/Eduversity.com/Client/Pages/LoginPages/ChangePassword.razor
+++ b/Eduversity.com/Client/Pages/LoginPages/ChangePassword.razor
@@ -18,28 +18,28 @@
         }
         else
         {
-            <EditForm Model="request" OnValidSubmit="HandleChangeUserPassword">
+            <EditForm Model="user" OnValidSubmit="HandleChangeUserPassword">
                 <DataAnnotationsValidator />
 
                 <div class="col-12 row" style="font-weight:bold">
                     <span class="@messageCssClass col-12 mb-3">@message</span>
                 </div>
                 <div class="col-12 row mb-4">
-                    <InputText id="oldPassword" @bind-Value="request.OldPassword" class="form-control" type="password" placeholder="Old Password" />
-                    <ValidationMessage For="@(() => request.OldPassword)" class="text-start" />
+                    <InputText id="oldPassword" @bind-Value="user.OldPassword" class="form-control" type="password" placeholder="Old Password" />
+                    <ValidationMessage For="@(() => user.OldPassword)" class="text-start" />
                 </div>
                 <div class="col-12 row mb-4">
-                    <InputText id="newPassword" @bind-Value="request.NewPassword" class="form-control" type="password" placeholder="New Password" />
-                    <ValidationMessage For="@(() => request.NewPassword)" class="text-start" />
+                    <InputText id="newPassword" @bind-Value="user.NewPassword" class="form-control" type="password" placeholder="New Password" />
+                    <ValidationMessage For="@(() => user.NewPassword)" class="text-start" />
                 </div>
                 <div class="col-12 row mb-4">
-                    <InputText id="confirmNewPassword" @bind-Value="request.ConfirmNewPassword" class="form-control" type="password" placeholder="Confirm New Password" />
-                    <ValidationMessage For="@(() => request.ConfirmNewPassword)" class="text-start" />
+                    <InputText id="confirmNewPassword" @bind-Value="user.ConfirmNewPassword" class="form-control" type="password" placeholder="Confirm New Password" />
+                    <ValidationMessage For="@(() => user.ConfirmNewPassword)" class="text-start" />
                 </div>
                 <button type="submit" class="btn btn-primary">Change Password</button>
                 @if (showCancelButton)
                 {
-                    <button class="btn btn-danger mx-3" @onclick="Cancel">Cancel</button>
+                    <button class="btn btn-danger mx-3" @onclick="CancelChangePassword">Cancel</button>
                 }
             </EditForm>
         }
@@ -47,17 +47,13 @@
 </div>
 
 @code {
-    UserChangePasswordRequest request = new UserChangePasswordRequest();
+    UserChangePasswordRequest user = new UserChangePasswordRequest();
     string message = string.Empty;
     string messageCssClass = string.Empty;
+
     [Parameter]
     public bool ChangeUserPassword { get; set; } = true;
     public bool showCancelButton { get; set; } = false;
-
-    protected override async Task OnParametersSetAsync()
-    {
-
-    }
 
     private async Task HandleChangeUserPassword()
     {
@@ -65,7 +61,7 @@
         {
             messageCssClass = "text-info";
             message = "Changing password...";
-            var result = await authService.ChangePassword(request);
+            var result = await authService.ChangePassword(user);
             message = result.Message;
             if (result.Success)
             {
@@ -75,9 +71,9 @@
             else
             {
                 messageCssClass = "text-warning";
-                toastService.ShowWarning(message);
+                // toastService.ShowWarning(message);
             }
-            request = new UserChangePasswordRequest();
+            user = new UserChangePasswordRequest();
         }
         catch (Exception ex)
         {
@@ -86,13 +82,15 @@
         }
     }
 
-    private async Task EnableChangePassword()
+    private void EnableChangePassword()
     {
         ChangeUserPassword = true;
         showCancelButton = true;
     }
-    private async Task Cancel()
+
+    private void CancelChangePassword()
     {
         ChangeUserPassword = false;
     }
+
 }
