--- a/Eduversity.com/Client/_Imports.razor
+++ b/Eduversity.com/Client/_Imports.razor
@@ -27,6 +27,7 @@
 @using Eduversity.com.Shared.Dtos.CourseDto
 @using Eduversity.com.Shared.Dtos.DepartmentDto
 @using Eduversity.com.Shared.Dtos.DepartmentOptionDto
+@using Eduversity.com.Shared.Dtos.EmailDto
 @using Eduversity.com.Shared.Dtos.FacultyDto
 @using Eduversity.com.Shared.Dtos.LecturerDto
 @using Eduversity.com.Shared.Dtos.LGADto
@@ -45,6 +46,7 @@
 @using Eduversity.com.Client.Services.UserAddressService
 @using Eduversity.com.Client.Services.CountryService
 @using Eduversity.com.Client.Services.CourseService
+@using Eduversity.com.Client.Services.EmailService
 @using Eduversity.com.Client.Services.StateService
 @using Eduversity.com.Client.Services.LecturerService
 @using Eduversity.com.Client.Services.LGAService
@@ -63,6 +65,9 @@
 @using Eduversity.com.Client.Services.SemesterService
 
 @using Microsoft.AspNetCore.Authorization
+@using Microsoft.AspNetCore.WebUtilities
 @using Microsoft.Extensions
 @using Microsoft.Extensions.Logging
+
+@using Blazored.LocalStorage
 @using Blazored.Toast.Services
