--- a/Eduversity.com/Client/wwwroot/css/app.css
+++ b/Eduversity.com/Client/wwwroot/css/app.css
@@ -132,3 +132,28 @@ a, .btn-link {
     height: 120px;
     border-radius: 20px;
 }
+
+
+
+.btncol {
+    flex: 0 0 auto;
+    width: 41.66666667%
+}
+
+.spancol {
+    flex: 0 0 auto;
+    width: 16.66666667%
+}
+
+@media (max-width: 1040.98px) {
+
+    .btncol {
+        flex: 0 0 auto;
+        width: 100%
+    }
+
+    .spancol {
+        flex: 0 0 auto;
+        width: 100%
+    }
+}
