--- a/Eduversity.com/Client/Pages/Index.razor
+++ b/Eduversity.com/Client/Pages/Index.razor
@@ -3,3 +3,12 @@
 <PageTitle>Home</PageTitle>
 
 <WelcomePrompt></WelcomePrompt>
+
+<AuthorizeView>  
+    <Authorized>
+
+    </Authorized>
+    <NotAuthorized>
+         <StudentSignIn></StudentSignIn>
+    </NotAuthorized>
+</AuthorizeView>
