--- a/Eduversity.com/Client/Shared/Layouts/CenteredCardLayout.razor
+++ b/Eduversity.com/Client/Shared/Layouts/CenteredCardLayout.razor
@@ -1,4 +1,4 @@
-﻿@layout LoginLayout
+﻿@layout MainLayout
 @inherits LayoutComponentBase
 <center>
     <div class="col-10 card">
@@ -20,7 +20,7 @@
     <div>
         <p>
             <small>
-                @footerMessage
+              @*   @footerMessage *@
             </small>
         </p>
     </div>
