--- a/Eduversity.com/Client/Shared/Layouts/NavMenu.razor
+++ b/Eduversity.com/Client/Shared/Layouts/NavMenu.razor
@@ -22,7 +22,7 @@
         </li>
         <AuthorizeView>   
             <NotAuthorized>              
-                <MenuUserLogin />
+               @*  <MenuUserLogin /> *@
             </NotAuthorized>
             <Authorized>                
                 <MenuStudent />
