--- a/Eduversity.com/Client/_Imports.razor
+++ b/Eduversity.com/Client/_Imports.razor
@@ -17,6 +17,8 @@
 @using Eduversity.com.Client.Shared.Searching
 @using Eduversity.com.Client.Shared.Students
 @using Eduversity.com.Client.Shared.Users
+@using Eduversity.com.Client.Pages
+@using Eduversity.com.Client.Pages.LoginPages
 
 @using Blazored.Toast
 @using Blazored.Toast.Configuration
