--- a/Eduversity.com/Client/Shared/Layouts/LoginLayout.razor
+++ b/Eduversity.com/Client/Shared/Layouts/LoginLayout.razor
@@ -2,6 +2,7 @@
 @inherits LayoutComponentBase
 
 <div class="col-12">
-    <br />
-    @Body
+    <article class="content px-4">
+        @Body
+    </article>
 </div>
